<resources>
    <string name="app_name">Currency Rates</string>
    <string name="realtime_currency_rates" translatable="false">REALTIME CURRENCY RATES</string>
    <string name="simple_elegant_and_realtime" translatable="false">SIMPLE, ELEGANT &amp; REALTIME</string>

    <string name="contact_us1">Made with </string>
    <string name="bankName">Bank</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="contact_us2">by Mohamed Wael</string>
    <string name="contact_us3" translatable="false">IMohamedWael@OutLook.com </string>
    <string name="about_author">About Author</string>
    <string name="sar">SAR</string>
    <string name="eur">EUR</string>
    <string name="gbp">GBP</string>
    <string name="usd">USD</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9431670656804948/1105452910</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="etChangeCurrencyHint">Write an amount to change</string>
</resources>
