<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCurrencyType"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/mainColor"
            android:gravity="center"
            android:text="GBP"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnBank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/bankName" />

                    <Button
                        android:id="@+id/btnSell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/sell" />

                    <Button
                        android:id="@+id/btnBuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/buy" />
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvBankGBPDetailes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v7.widget.CardView>

