<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gradient="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blogspot.mowael.realtimecurrencyrates.activities.ContactUsActivity">

    <com.dynamitechetan.flowinggradient.FlowingGradient

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        gradient:transition_drawable="@drawable/trans_longer"
        gradient:transition_duration="500" />

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout

            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNewsName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contact_us1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorYellow"
                android:textSize="50dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivNewsLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/made_with_love2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout3"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contact_us2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorYellow"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contact_us3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorYellow"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/llContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageButton
            android:id="@+id/ibGitHub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/github_box" />

        <ImageButton
            android:id="@+id/ibLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/linkedin_box" />

        <ImageButton
            android:id="@+id/ibTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/twitter" />


    </LinearLayout>

</RelativeLayout>
